vpc_3_tier/custom_vpc/module/vpc/igw.tf
resource "aws_internet_gateway" "internet_gateway" {
  vpc_id = aws_vpc.my_vpc.id

  tags = {
    "Name" = "${var.vpc_name}-internet-gateway"
  }
}
