vpc_3_tier/custom_vpc/module/vpc/main.tf
#vpc block

resource "aws_vpc" "my_vpc" {
    cidr_block = var.vpc_cidr_block
    instance_tenancy = var.vpc_instance_tenancy

    tags = {
      "Name" = var.vpc_name
    }
}
